--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "body-parser": "^1.15.2",
     "d3": "^4.2.2",
     "dotenv": "^2.0.0",
+    "eslint-config-defaults": "^9.0.0",
     "express": "^4.14.0",
     "leaflet": "^1.0.3",
     "leaflet.utfgrid": "git+https://github.com/danzel/Leaflet.utfgrid.git",
